[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbl-probe"
version = "0.1.0"
description = "Serial communication & protocol analysis MCP server for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "pyserial",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sbl_probe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
